ArchitectureSystem/k8s/web/ingresss/nginxingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webapp
  namespace: webapp
spec:
  ingressClassName: nginx 
  rules:
    - host: dangnguyen.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reactjs-service
                port:
                  number: 3000
